--- a/Bubble solution.html
+++ b/Bubble solution.html
@@ -6,7 +6,7 @@
     </head>
     <body>
      <script>
-        let scores = [60, 50, 60, 58, 54, 54, 58, 50, 52, 48, 69, 34, 55, 51, 52, 44, 51, 69, 64, 66, 55, 52, 61, 46, 31, 57, 52, 44, 18, 41, 53, 55, 61, 51, 44];
+        var scores = [60, 50, 60, 58, 54, 54, 58, 50, 52, 48, 69, 34, 55, 51, 52, 44, 51, 69, 64, 66, 55, 52, 61, 46, 31, 57, 52, 44, 18, 41, 53, 55, 61, 51, 44];
         var output;
         var i = 0;
         while (i < scores.length) {
